[gd_scene load_steps=9 format=3 uid="uid://yhey08vlerh"]

[ext_resource type="Texture2D" uid="uid://d11wyl38w6tef" path="res://Sprites/Default.svg" id="1_34umx"]
[ext_resource type="Script" path="res://Scenes/stacking.gd" id="1_vrwum"]
[ext_resource type="Texture2D" uid="uid://3rbp3n36ucx6" path="res://Sprites/slice4.svg" id="2_bgq2l"]
[ext_resource type="Texture2D" uid="uid://dbfkn3y6oj0ts" path="res://Sprites/slice1.svg" id="3_r7rb3"]
[ext_resource type="LabelSettings" uid="uid://c3oujy4okpq24" path="res://Scenes/StackableItems/WhiteText.tres" id="5_guhdh"]
[ext_resource type="LabelSettings" uid="uid://dmsdcl2ojmwvq" path="res://Scenes/StackableItems/RedText.tres" id="6_4m0nt"]
[ext_resource type="PackedScene" uid="uid://dltn48y8f0ucr" path="res://Scenes/StackableItems/box.tscn" id="6_gf1jr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sf5wp"]
size = Vector2(288, 464)

[node name="Stacking" type="Node2D"]
script = ExtResource("1_vrwum")

[node name="OverlapWarning" type="Label" parent="."]
visible = false
offset_left = 120.0
offset_top = -176.0
offset_right = 588.0
offset_bottom = 32.0
text = "No overlapping cargo!"
label_settings = ExtResource("6_4m0nt")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Character" type="Node2D" parent="."]
position = Vector2(32, -20)

[node name="Default" type="Sprite2D" parent="Character"]
position = Vector2(-368, 144)
texture = ExtResource("1_34umx")

[node name="Slice4" type="Sprite2D" parent="Character"]
position = Vector2(-72, 144)
scale = Vector2(1.06448, 1)
texture = ExtResource("2_bgq2l")

[node name="Slice1" type="Sprite2D" parent="Character"]
position = Vector2(-271.153, 299.764)
texture = ExtResource("3_r7rb3")

[node name="Slice2" type="Sprite2D" parent="Character"]
position = Vector2(-459.764, 298.542)
texture = ExtResource("3_r7rb3")

[node name="StackZone" type="Area2D" parent="."]
position = Vector2(32, -20)

[node name="Label" type="Label" parent="StackZone"]
offset_left = -552.0
offset_top = -320.0
offset_right = -212.0
offset_bottom = -120.0
text = "Place cargo in this zone!"
label_settings = ExtResource("5_guhdh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Zone" type="Polygon2D" parent="StackZone"]
position = Vector2(-76.0561, 20)
scale = Vector2(0.762789, 1)
color = Color(1, 1, 1, 0.14902)
polygon = PackedVector2Array(-152, -256, 224, -256, 224, 208, -152, 208)

[node name="Arrow" type="Polygon2D" parent="StackZone"]
position = Vector2(-304, 248)
scale = Vector2(0.833333, 1)
polygon = PackedVector2Array(-120, -424, -120, -296, 67.2, -296, 67.2, -272, 115.2, -312, 67.2, -360, 67.2, -328, -96, -312, -105.6, -424)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StackZone"]
position = Vector2(-48, -4)
shape = SubResource("RectangleShape2D_sf5wp")

[node name="Items" type="Node2D" parent="."]

[node name="Box" parent="Items" instance=ExtResource("6_gf1jr")]

[node name="Box2" parent="Items" instance=ExtResource("6_gf1jr")]
position = Vector2(472, 40)

[node name="Box3" parent="Items" instance=ExtResource("6_gf1jr")]
position = Vector2(296, 72)

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="area_entered" from="StackZone" to="." method="_on_stack_zone_area_entered"]
[connection signal="area_exited" from="StackZone" to="." method="_on_stack_zone_area_exited"]
